# AdventOfCode2023

LearnOpenGLCherno/: CMakeLists.txt
LearnOpenGLCherno/src/: Application.cpp
Puzzle1/: CMakeLists.txt  input2.txt  main.cpp
Puzzle10/: CMakeLists.txt  main.cpp
Puzzle11/: CMakeLists.txt  main.cpp  testInput.txt
Puzzle12/: CMakeLists.txt
Puzzle2/: CMakeLists.txt  main.cpp
Puzzle3/: CMakeLists.txt  main.cpp
Puzzle3-2/: CMakeLists.txt  main.cpp
Puzzle4/: CMakeLists.txt  input2.txt  main.cpp
Puzzle4-2/: CMakeLists.txt  main.cpp
Puzzle5/: CMakeLists.txt  main.cpp
Puzzle5-2/: CMakeLists.txt  main.cpp
Puzzle6/: CMakeLists.txt  main.cpp
Puzzle7/: CMakeLists.txt  main.cpp
Puzzle7-2/: CMakeLists.txt  main.cpp  testInput.txt
Puzzle8/: CMakeLists.txt  main.cpp  testInput.txt
Puzzle8-2/: CMakeLists.txt  main.cpp  testInput.txt
Puzzle9/: CMakeLists.txt  main.cpp  testInput.txt
Puzzle9-2/: CMakeLists.txt  main.cpp  testInput.txt
